--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            <h2>Оценка условий рыбалки</h2><ul>  <li>14 ноября: 40%</li>  <ul>    <li>Высый прилив может сделать ловлю рыбы сложной, низкий прилив более благоприятен.</li>    <li>Lуна в фазе растущей четверть не обязательно влияет на условия рыбалки.</li>  </ul></li><li>15 ноября: 60%</li><ul>  <li>Уровень волны умеренный, что может создать волнующие воды и сделать ловлю рыбы менее идеальной.</li>  <li>Благоприятные приливно-отливные условия и относительно спокойный ветер делают этот день более подходящим для рыбалки.</li></ul><li>16 ноября: 80%</li><ul>  <li>Крупная волна высотой около 0,52 метра может быть сложным из-за суровых вод.</li>  <li>Общие условия seem относительно благоприятными по сравнению с предыдущими днями.</li></ul></ul><h3>Понять означает каждый балл?</h3><ul>  <li>0-29: Плохие условия</li>  <li>30-49: Средние условия</li>  <li>50-69: Хорошие условия</li>  <li>70-89: Отличные условия</li>  <li>90-100: Исключительные условия</li></ul><h3>Обратите внимание:</h3><p>Эти оценки предназначены для общего представления об условиях рыбалки и не должны считаться инвестиционным советом или гарантией успеха.</p>
+            <h2>Анализ условий рыбалки</h2><h3>Оценка дней для рыбалки</h3><p>16 ноября: 75% - Слегка более высокая высота волн и умеренная погода могут сделать этот день хорошим для рыбалки.</p><ul> <li>15 نوفمبر: 65% - Низкий прилив не идеален для рыбалки, но спокойная погода и умеренная высота волн могут сделать это управляемым.</li></ul><p>17 ноября: 40% - Слегка более высокая высота волн и сильный ветер могут сделать этот день сложным для рыбалки.</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Nov 14, 2024, 4:01 AM</p>
+        <p>Generated with AI Nov 15, 2024, 4:02 AM</p>
     </footer>
 </body>
 </html>
